# crew_exa

./: README.md  pyproject.toml
src/newsletter/: crew.py  main.py
src/newsletter/config/: tasks.yaml
src/newsletter/tools/: custom_tool.py
