[project]
name = "newsletter"
version = "0.1.0"
description = "newsletter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
newsletter = "newsletter.main:run"
run_crew = "newsletter.main:run"
train = "newsletter.main:train"
replay = "newsletter.main:replay"
test = "newsletter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
